<?xml version="1.0"?>
<package format="2">
  <name>daut</name>
  <version>0.2.0</version>
  <description>The Data automaton package</description>
  
  <maintainer email="nfr@jpl.nasa.gov">Nicolas Rouquette</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>